--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body	{
-	background-color: peachpuff;
+	background-color: #642B1B;
 	color: #fff;
-	font-family: fantasy;
+	font-family: 'PT Sans Caption', sans-serif;
 	}
 
 #page	{
@@ -19,3 +19,42 @@ img	{
 	margin-left:auto;
 	margin-right:auto;
 	}
+	
+p {
+	background-color: #000;
+}
+
+h1 {
+
+    font-size: 200%;
+
+}
+
+a:hover, a:visited, a:link, a:active  {
+
+    color: #F08E37;
+
+    text-decoration: none;
+
+}
+
+
+
+li {
+
+    
+
+    color:  #93AD88;
+
+}
+
+
+
+#htmlcaption1 {
+
+    
+
+    font-size: 150%;
+
+}
+
