--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p {
 
 h1 {
 
-    font-size: 200%;
+    font-size: 300%;
 
 }
 
@@ -35,6 +35,10 @@ h1 {
 	font-style: bold;
 	color: red;
 }
+
+#italics {
+	font-style: oblique;
+	}
 
 a:hover, a:visited, a:link, a:active  {
 
